# screen-time-ctrl-android-root

./: .gitignore  Cargo.toml  README.md  sync_config.fish  test_run_debug.fish
src/: android_dumpsys_usagestats_parser.rs  main.rs
