[package]
name = "screen-time-ctrl-android-root"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.93"
chrono = "0.4.38"
fork = "0.2.0"
lazy_static = "1.5.0"
random = "0.14.0"
serde = { version = "*", features = ["derive"] }
serde_json = "1.0.133"
serde_json5 = "0.1.0"
sysinfo = "0.32.0"
